--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,9 +10,9 @@
 
   %body
     =render 'layouts/navbar'
-
-    %p.notice
-      =notice
-    %p.alert
-      =alert
-    = yield
+    .container
+      %p.notice
+        =notice
+      %p.alert
+        =alert
+      = yield
