--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,11 +1,12 @@
 %nav.navbar.navbar-default
-  .container-fluid.navbar-container
+  .navbar-container
     .navbar-header
       %button.navbar-toggle.collapsed{"data-target" => "#bs-navbar-collapse-1", "data-toggle" => "collapse", type: "button"}
         %span.sr-only Toggle Navigation
         %span.icon-bar
         %span.icon-bar
-      .navbar-brand= link_to "Photogram", root_path
+      .navbar-brand
+        = link_to "Photogram", root_path
     .collapse.navbar-collapse#bs-navbar-collapse-1
       %ul.nav.navbar-nav.navbar-right
         - if user_signed_in?
@@ -13,8 +14,6 @@
             = render 'notifications/notification_dropdown'
           %li
             = link_to "New Post", new_post_path
-          %li
-            = link_to "Browse Posts", browse_posts_path
           %li
             = link_to "Logout", destroy_user_session_path, method: :delete
         - else
